<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/localizacao"
            android:title="@string/pagina_map" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/usuario"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/laco"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_assessments"
            android:icon="@drawable/premioestrela"
            android:title="@string/menu_Assessments" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout_box"
            android:title="@string/logout" />

    </group>
</menu>