<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_login">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >

    </fragment>

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.myapplication.ui.favorites.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" >
    </fragment>

    <fragment
        android:id="@+id/nav_assessments"
        android:name="com.example.myapplication.ui.assessments.AssessmentsFragment"
        android:label="@string/menu_Assessments"
        tools:layout="@layout/fragment_assessments" />

    <fragment android:id="@+id/nav_login"
        android:name="com.example.myapplication.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login"/>

    <fragment android:id="@+id/menu_profile"

        />
</navigation>